--- a/WpfDataGridSampleApp/WpfDataGridSampleApp/Views/MainWindow.xaml
+++ b/WpfDataGridSampleApp/WpfDataGridSampleApp/Views/MainWindow.xaml
@@ -7,18 +7,20 @@
         xmlns:Prism="http://prismlibrary.com/"
         Prism:ViewModelLocator.AutoWireViewModel="True"
         mc:Ignorable="d"
-        Title="MainWindow" Height="300" Width="300">
+        Title="WPF DataGrid sample"
+        Height="600"
+        Width="800">
     <Grid>
         <TabControl Prism:RegionManager.RegionName="MainRegion">
             <TabControl.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Content.DataContext.Title.Value, RelativeSource={RelativeSource AncestorType=TabItem}}" 
-                                   Margin="5"/>
+                        <TextBlock Text="{Binding Content.DataContext.Title.Value, RelativeSource={RelativeSource AncestorType=TabItem}}"
+                                   Margin="5" />
                         <Button Command="{Binding DataContext.CloseTabCommand, RelativeSource={RelativeSource AncestorType=Window}}"
-                                CommandParameter="{Binding Content, RelativeSource={RelativeSource AncestorType=TabItem}}" 
+                                CommandParameter="{Binding Content, RelativeSource={RelativeSource AncestorType=TabItem}}"
                                 Content="X"
-                                Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"/>
+                                Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" />
                     </StackPanel>
                 </DataTemplate>
             </TabControl.ItemTemplate>
