--- a/WpfDataGridSampleApp/WpfDataGridSampleApp/Views/MultiRowMultiColumnView.xaml
+++ b/WpfDataGridSampleApp/WpfDataGridSampleApp/Views/MultiRowMultiColumnView.xaml
@@ -12,8 +12,7 @@
     <Grid>
         <DataGrid ItemsSource="{Binding People}"
                   AutoGenerateColumns="False"
-                  IsReadOnly="True"
-                  Grid.IsSharedSizeScope="False">
+                  IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="名前"
                                     Binding="{Binding Name}" />
@@ -26,35 +25,55 @@
                     </DataGridTemplateColumn.HeaderStyle>
                     <DataGridTemplateColumn.Header>
                         <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="{Binding ElementName=Col1, Path=ActualWidth}"/>
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="{Binding ElementName=Col2, Path=ActualWidth}" />
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Text="年齢" />
-                            <GridSplitter Width="2"
-                                          Background="LightGray"
-                                          Grid.Column="1" />
-                            <TextBlock Text="誕生日"
-                                       Grid.Column="2" />
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+                            <TextBlock Text="性別"
+                                       HorizontalAlignment="Center" />
+                            <Separator Grid.Row="1" />
+                            <Grid Grid.Row="2">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Text="年齢" />
+                                <GridSplitter Width="2"
+                                              Background="LightGray"
+                                              Grid.Column="1" />
+                                <TextBlock Text="誕生日"
+                                           Grid.Column="2" />
+                            </Grid>
                         </Grid>
                     </DataGridTemplateColumn.Header>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition x:Name="Col1"
-                                                      Width="Auto" />
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition x:Name="Col2"
-                                                      Width="Auto" />
-                                </Grid.ColumnDefinitions>
-                                <TextBlock Text="{Binding Age}" />
-                                <GridSplitter Width="2"
-                                              Background="LightGray"
-                                              Grid.Column="1" />
-                                <TextBlock Text="{Binding Birthday, StringFormat=yyyy/MM/dd}"
-                                           Grid.Column="2" />
+                                <Grid.RowDefinitions>
+                                    <RowDefinition />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="{Binding Gender}"
+                                           HorizontalAlignment="Center" />
+                                <Separator Grid.Row="1" />
+                                <Grid Grid.Row="2">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition x:Name="Col1"
+                                                          Width="Auto" />
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition x:Name="Col2"
+                                                          Width="Auto" />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Text="{Binding Age}" />
+                                    <GridSplitter Width="2"
+                                                  Background="LightGray"
+                                                  Grid.Column="1" />
+                                    <TextBlock Text="{Binding Birthday, StringFormat=yyyy/MM/dd}"
+                                               Grid.Column="2" />
+                                </Grid>
                             </Grid>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
