ちょいと追加

--- a/WpfDataGridSampleApp/WpfDataGridSampleApp/Views/MultiRowMultiColumnView.xaml
+++ b/WpfDataGridSampleApp/WpfDataGridSampleApp/Views/MultiRowMultiColumnView.xaml
@@ -32,6 +32,42 @@
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition />
                             </Grid.RowDefinitions>
+                            <TextBlock Text="性別" />
+                            <Separator Grid.Row="1" />
+                            <TextBlock Text="年齢"
+                                       Grid.Row="2" />
+                        </Grid>
+                    </DataGridTemplateColumn.Header>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="{Binding Gender}" />
+                                <Separator Grid.Row="1" />
+                                <TextBlock Grid.Row="2"
+                                           Text="{Binding Age}" />
+                            </Grid>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn>
+                    <DataGridTemplateColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment"
+                                    Value="Stretch" />
+                        </Style>
+                    </DataGridTemplateColumn.HeaderStyle>
+                    <DataGridTemplateColumn.Header>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
                             <TextBlock Text="性別"
                                        HorizontalAlignment="Center" />
                             <Separator Grid.Row="1" />
